--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Math, Sonification, Plots
 ---
 <div class="blurb">
 	<h1>Math Graphing</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="/about">Read more about graphs</a></p>
 </div><!-- /.blurb -->
