--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Math, Sonification, Plots
 ---
 <div class="blurb">
 	<h1>Math Graphing</h1>
+	[<img src="\images\ST_Circle.png">](\images\ST_Circle.png)
 	<img src="\images\ST_Circle.png">
 	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="/about">Read more about graphs</a></p>
 </div><!-- /.blurb -->
