--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: Math, Sonification, Plots
 	<h1>Math Graphing</h1>
 	[<img src="\images\ST_Circle.png">](\images\ST_Circle.png)
 	<img src="\images\ST_Circle.png">
-	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="/about">Read more about graphs</a></p>
+	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Circle.png">Read more about graphs</a></p>
 </div><!-- /.blurb -->
