--- a/index.html
+++ b/index.html
@@ -7,4 +7,5 @@ title: Math, Sonification, Plots
 	[<img src="\images\ST_Circle.png">](\images\ST_Circle.png)
 	<img src="\images\ST_Circle.png">
 	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Circle.png">Read more about graphs</a></p>
+	<button name="button" onclick="\images\ST_Circle.png">Click me</button>
 </div><!-- /.blurb -->
