--- a/index.html
+++ b/index.html
@@ -8,4 +8,9 @@ title: Math, Sonification, Plots
 	<img src="\images\ST_Circle.png">
 	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Circle.png">Read more about graphs</a></p>
 	<button name="button" onclick="http://www.google.co">GOOGLE</button>
+	
+	<p>This example demonstrates how to assign an "onclick" event to the window object.</p>
+	<p>Click anywhere in this window to change the background color of body.</p>
+	<script>window.onclick = myFunction;
+	function myFunction() {    document.getElementsByTagName("BODY")[0].style.backgroundColor = "yellow";}</script>
 </div><!-- /.blurb -->
