--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ title: Math, Sonification, Plots
 	}
 	</script>
 	
-	<input type="button" name="Ignore Select" value="Ignore Select" id="select" onclick="colorchange('select')" style="background:rgb(255,145,0);"/>
-	<input type="button" name="Ignore Delete" value="Ignore Delete" id="select1" onclick="colorchange('select1');" style="background:rgb(255,145,0);"/> 
+	<input type="button" name="YELLOW" value="Ignore Select" id="select" onclick="colorchange(id)" style="background:rgb(255,145,0);"/>
+	<input type="button" name="BLACK" value="Ignore Delete" id="select1" onclick="colorchange(id);" style="background:rgb(0,0,0);"/> 
 	<script>
 	function colorchange(id) {
 		var background = document.getElementById(id).style.background;
