--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ title: Math, Sonification, Plots
 	
 	<p>This example demonstrates how to assign an "onclick" event to the window object.</p>
 	<p>Click anywhere in this window to change the background color of body.</p>
+	
+	sfsdf
+	
 	<script>
 	window.onclick = myFunction;
 	function myFunction() {
