--- a/images/index.html
+++ b/images/index.html
@@ -1,4 +1,6 @@
 ---
-layout: defaulttitle: Math Plots
+layout: default
+title: Math Plots
 ---
-<h1>{{ page.title }}</h1>
+
+      <h1>{{ page.title }}</h1>
