--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Math, Sonification, Plots
 	[<img src="\images\ST_Circle.png">](\images\ST_Circle.png)
 	<img src="\images\ST_Circle.png">
 	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Circle.png">Read more about graphs</a></p>
-	<button name="button" onclick="\images\ST_Circle.png">CIRCLE</button>
+	<button name="button" onclick="/images/ST_Circle.png">CIRCLE</button>
 	
 	<p>This example demonstrates how to assign an "onclick" event to the window object.</p>
 	<p>Click anywhere in this window to change the background color of body.</p>
