--- a/circle/index.html
+++ b/circle/index.html
@@ -1,5 +1,11 @@
-
+---
+layout: default
+title: Math, Sonification, Plots
+---
 <div class="blurb">
-<h1>Math Graphing</h1>
-<img src="\images\ST_Circle.png">
-div><!-- /.blurb -->
+
+        <img src="\images\ST_Circle.png">
+  <img src="\images\ST_Circle.png">
+  
+
+  div><!-- /.blurb -->
