--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@ title: Math, Sonification, Plots
 	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Circle.png">Read more about graphs</a></p>
 	<button name="button" onclick="\circle">CIRCLE</button>
 	
+	<button id="myButton" class="float-left submit-button" >Home</button>
+	<script>
+    	document.getElementById("myButton").onclick = function () {
+        	location.href = "\circle";
+    	};
+	</script>
+	
 	<p>This example demonstrates how to assign an "onclick" event to the window object.</p>
 	<p>Click anywhere in this window to change the background color of body.</p>
 	<script>
