--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@ title: Math, Sonification, Plots
 ---
 <div class="blurb">
 	<h1>Math Graphing</h1>
-	[<img src="\images\ST_Circle.png">](\images\ST_Circle.png)
 	<img src="\images\ST_Circle.png">
 	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Circle.png">Read more about graphs</a></p>
-	<button name="button" onclick="\circle">CIRCLE</button>
 	
-	<button id="myButton" class="float-left submit-button" >Home</button>
+	<button id="myButton" class="float-left submit-button" >CIRCLE</button>
 	<script>
     	document.getElementById("myButton").onclick = function () {
         	location.href = "\circle";
