--- a/circle/index.html
+++ b/circle/index.html
@@ -5,7 +5,13 @@ title: Math, Sonification, Plots
 <div class="blurb">
 
         <img src="\images\ST_Circle.png">
-        <img src="\images\ST_Circle.png">
+        <button id="myButton" class="float-left submit-button" >SONIFICATION</button>
+        <script>
+        document.getElementById("myButton").onclick = function () {
+                location.href = "\sounds\440.wav";
+        };
+        </script>
+        <img src="\images\HC_Circle.png">
   
 
   div><!-- /.blurb -->
