--- a/circle/index.html
+++ b/circle/index.html
@@ -8,7 +8,7 @@ title: Math, Sonification, Plots
         <button id="myButton" class="float-left submit-button" >SONIFICATION</button>
         <script>
         document.getElementById("myButton").onclick = function () {
-                location.href = "/sounds/440.wav";
+                location.href = "https://rbobkoskie3.github.io/sounds/440.wav";
         };
         </script>
         <img src="\images\HC_Circle.png">
