--- a/circle/index.html
+++ b/circle/index.html
@@ -64,7 +64,5 @@ title: Math, Sonification, Plots
         <input id="field7" type="hidden" name="sfcampaignid" value="2018q2-ww-Services-Contact">
         <input id="field8" type="hidden" name="source" value="/"">
       </form>
-
-　
         
-  div><!-- /.blurb -->
+<!-- /.blurb -->
