--- a/circle/index.html
+++ b/circle/index.html
@@ -25,8 +25,7 @@ title: Math, Sonification, Plots
         <img src="\images\HC_Circle.png">
         
         <form action="/action_page.php">
-        First name: <input type="text" name="FirstName" value="Mickey"><br>
-        Last name: <input type="text" name="LastName" value="Mouse"><br>
+        First name: <input type="text" name="FirstName" value="Mickey"><textarea rows="4" cols="50"><br>
         <input type="submit" value="Submit">
         </form>
         
