--- a/circle/index.html
+++ b/circle/index.html
@@ -25,7 +25,7 @@ title: Math, Sonification, Plots
         <img src="\images\HC_Circle.png">
         
         <form action="/action_page.php">
-        First name: <input type="text" name="FirstName" value="Mickey"><textarea rows="4" cols="50"><br>
+        Comment: <input type="text" width=100px length=100px name="FirstName" value="Enter your comment here"><br>
         <input type="submit" value="Submit">
         </form>
         
