--- a/circle/index.html
+++ b/circle/index.html
@@ -25,7 +25,7 @@ title: Math, Sonification, Plots
         <img src="\images\HC_Circle.png">
         
         <form action="/action_page.php">
-        Comment: <input type="text" width=100px length=100px name="FirstName" value="Enter your comment here"><br>
+        Comment: <input type="text" name="comment" size="35"><br>
         <input type="submit" value="Submit">
         </form>
         
