--- a/circle/index.html
+++ b/circle/index.html
@@ -30,8 +30,7 @@ title: Math, Sonification, Plots
         </form>
         <p>Click the "Submit" button and the form-data will be sent to a page on the server called "/action_page.php".</p>
         
-        <form action="WriteToFile(passForm">
-        <input name="subject" type="text" />
+        <form action="mailto:rbobkoskie3@gatech.edu" method="GET">
         <textarea name="body"></textarea>
         <input type="submit" value="Send" />
         </form>
