--- a/circle/index.html
+++ b/circle/index.html
@@ -28,10 +28,10 @@ title: Math, Sonification, Plots
         <!-- begin wwww.htmlcommentbox.com -->
           <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
           <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
-          <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24xbqcTDnMdxjAyZQCO7RJr0"+"&opts=16862&num=10&ts=1508794324542");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+          <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24ndx59On.x2Zb5qyz%2FqFCZ1"+"&opts=16862&num=10&ts=1508847673018");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
         <!-- end www.htmlcommentbox.com -->
         
-        <p>If there are any additional comments, enter in textbox and click "Send".</p>
+        <p>If there are any additional feedback, enter in textbox and click "Send".</p>
         <form action="mailto:rbobkoskie3@gatech.edu" method="GET">
                 <textarea name="body"></textarea>
                 <input type="submit" value="Send" />
