--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@ title: Math, Sonification, Plots
 	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Circle.png">Read more about graphs</a></p>
 	
 	<button id="myButton" class="float-left submit-button" >CIRCLE</button>
-	<script>
-    	document.getElementById("myButton").onclick = function () {
+	<script>document.getElementById("myButton").onclick = function () {
         	location.href = "\circle";
     	};
+	</script>
+	
+	<button id="myButton" class="float-left submit-button" >LINE</button>
+	<script>document.getElementById("myButton").onclick = function () {
+		location.href = "\line";
+	};
 	</script>
 	
 	<p>This example demonstrates how to assign an "onclick" event to the window object.</p>
