--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 layout: default
 title: Math, Sonification, Plots
 ---
-<div class="blurb">
+<div class="math_class">
 	<h1>Math Graphing</h1>
 	<img src="\images\ST_Circle.png">
 	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Circle.png">Read more about graphs</a></p>
 	
-	<button id="myButton" class="float-left submit-button" >CIRCLE</button>
-	<script>document.getElementById("myButton").onclick = function () {
+	<button id="myButton_1" class="float-left submit-button" >CIRCLE</button>
+	<script>document.getElementById("myButton_1").onclick = function () {
         	location.href = "\circle";
     	};
 	</script>
 	
-	<button id="myButton" class="float-left submit-button" >LINE</button>
-	<script>document.getElementById("myButton").onclick = function () {
+	<button id="myButton_2" class="float-left submit-button" >LINE</button>
+	<script>document.getElementById("myButton_2").onclick = function () {
 		location.href = "\line";
 	};
 	</script>
@@ -56,4 +56,4 @@ title: Math, Sonification, Plots
   		}
 	}
 	</script>
-</div><!-- /.blurb -->
+</div>
