--- a/circle/index.html
+++ b/circle/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Math, Sonification, Plots
 ---
-<div class="blurb">
+<div class="circle_class">
 
         <img src="\images\ST_Circle.png">
         
@@ -36,5 +36,4 @@ title: Math, Sonification, Plots
                 <textarea name="body"></textarea>
                 <input type="submit" value="Send" />
         </form>
-        
-<!-- /.blurb -->
+</div>
