--- a/line/index.html
+++ b/line/index.html
@@ -1,4 +1,10 @@
-  <!-- The links down the left -->
+---layout: defaul
+ttitle: Math, Sonification, Plots
+---
+
+<div class="line_class">
+  
+    <!-- The links down the left -->
     <nav>
     <ul>
       <li><a href="https://www.html-5-tutorial.com/">home</a></li>
@@ -40,3 +46,5 @@
       <li><a href="contact.php">contact</a></li>
     </ul>
     </nav>
+
+</div>
