--- a/line/index.html
+++ b/line/index.html
@@ -1,10 +1,9 @@
 ---
-layout: defaul
+layout: default
 ttitle: Math, Sonification, Plots
 ---
 
-<div class="line_class">
-  
+<div class="line_class">  
     <!-- The links down the left -->
     <nav>
     <ul>
