--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Math, Sonification, Plots
 <div class="math_class">
 	<h1>Math Graphing</h1>
 	<img src="\images\ST_Circle.png">
-	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Circle.png">Read more about graphs</a></p>
+	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Parabola.png">Read more about graphs</a></p>
 	
 	<script type="text/javascript">
 	function changeImg(image){
