--- a/about/index.html
+++ b/about/index.html
@@ -6,14 +6,11 @@ title: Math, Sonification, Plots
         
         <h1>About the Project</h1>
         <p>This website is part of a human factors study to improve ergonomics for the visually impaired.
-           The concept originates from a CS 6460: Educational Technologyclass project.
-        <\p>
-        
-        <p>Comments can be entered "Anonymously".</p>    
-        <!-- begin wwww.htmlcommentbox.com -->
-          <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
-          <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
-          <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%24ndx59On.x2Zb5qyz%2FqFCZ1"+"&opts=16862&num=10&ts=1508847673018");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-        <!-- end www.htmlcommentbox.com -->
+           The concept originates from a<a href="https://www.omscs.gatech.edu/cs-6460-educational-technology">CS 6460: Educational Technology</a>class project.
+           In addition to this website, I have built a<a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform">survey</a>to gather information for utilizing High Contrast Settings.
 
+
+
+
+        </p>
 </div>
