--- a/about/index.html
+++ b/about/index.html
@@ -3,14 +3,21 @@ layout: default
 title: Math, Sonification, Plots
 ---
 <div class="circle_class">
+        <head>
+        <style>
+        div {
+             text-align: justify;
+             text-justify: inter-word;
+             }
+        </style>
+        </head>
         
         <h1>About the Project</h1>
-        <p>This website is part of a human factors study to improve ergonomics for the visually impaired.
-           The concept originates from a <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology" target="_blank"> CS 6460: Educational Technology</a> class project.
-           In addition to this website, I have built a <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform" target="_blank"> survey</a> to gather information for utilizing High Contrast Settings.
-
-
-
-
-        </p>
+        <div>
+           This website is part of a human factors study to improve ergonomics for the visually impaired.
+           The concept originates from a <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology" target="_blank">
+           CS 6460: Educational Technology</a> class project. In addition to this website,
+           I have built a <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform" target="_blank">
+           survey</a> to gather information for utilizing High Contrast Settings.
+        </div>
 </div>
