--- a/circle/index.html
+++ b/circle/index.html
@@ -2,9 +2,10 @@
 layout: default
 title: Math, Sonification, Plots
 ---
+
 <div class="circle_class">
 
-        <img src="\images\ST_Circle.png">
+        <img src="\images\ST_Circle.png" alt="Graph of a Circle w/o High Contrast">
         
         <input type="button" value="SONIFICATION"  onclick="play()">
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/440.wav" ></audio>
