--- a/circle/index.html
+++ b/circle/index.html
@@ -4,7 +4,7 @@ title: Math, Sonification, Plots
 ---
 
 <div class="circle_class">
-
+        <title>This is a circle</title>
         <img src="\images\ST_Circle.png" alt="Graph of a Circle w/o High Contrast">
         
         <input type="button" value="SONIFICATION"  onclick="play()">
