--- a/circle/index.html
+++ b/circle/index.html
@@ -4,8 +4,7 @@ title: Math, Sonification, Plots
 ---
 
 <div class="circle_class">
-        <title>This is a circle</title>
-        <img src="\images\ST_Circle.png" alt="Graph of a Circle w/o High Contrast">
+        <img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast">
         
         <input type="button" value="SONIFICATION"  onclick="play()">
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/440.wav" ></audio>
