--- a/circle/index.html
+++ b/circle/index.html
@@ -3,10 +3,26 @@ layout: default
 title: Math, Sonification, Plots
 ---
 
+<head>
+  <style>
+        .button {
+                background-color: rgb(0,0,0);
+                border: none;
+                color: white;
+                padding: 15px 32px;
+                text-align: center;
+                text-decoration: none;
+                display: inline-block;
+                font-size: 16px;
+                margin: 4px 2px;
+                cursor: pointer;}
+  </style>
+</head>
+
 <div class="circle_class">
         <img src="\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast">
         
-        <input type="button" value="SONIFICATION"  onclick="play()">
+        <input type="button" class="button" value="SONIFICATION"  onclick="play()">
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/440.wav" ></audio>
         <script>
                 function play(){
