--- a/circle/index.html
+++ b/circle/index.html
@@ -6,14 +6,15 @@ title: Math, Sonification, Plots
 <head>
   <style>
         .button {
-                background-color: rgb(0,0,0);
+                background-color: black;
                 border: none;
-                color: white;
+                color: yellow;
                 padding: 15px 32px;
                 text-align: center;
                 text-decoration: none;
                 display: inline-block;
                 font-size: 16px;
+                font-weight: bold;
                 margin: 4px 2px;
                 cursor: pointer;}
   </style>
