--- a/circle/index.html
+++ b/circle/index.html
@@ -6,9 +6,9 @@ title: Math, Sonification, Plots
 <head>
   <style>
         .button {
-                background-color: #4CAF50;
+                background-color: #000000;
                 border: none;
-                color: white;
+                color: yellow;
                 padding: 15px 32px;
                 text-align: center;
                 text-decoration: none;
