--- a/index.html
+++ b/index.html
@@ -47,18 +47,17 @@ title: Math, Sonification, Plots
 	}
 	</script>
 	
-	<input type="button" name="YELLOW" value="Ignore Select" id="select" onclick="colorchange(id)" style="background:rgb(255,145,0);"/>
-	<input type="button" name="BLACK" value="Ignore Delete" id="select1" onclick="colorchange(id);" style="background:rgb(0,0,0);"/> 
+	<input type="button" name="BLACK" value="Ignore Delete" id="select1" onclick="changeColor();" style="background:rgb(0,0,0);"/> 
 	<script>
 	var count = 1;
-	function setColor(btn, color) {
+	function changeColorolor() {
 		var property = document.getElementById(btn);
 		if (count == 0) {
 			property.style.backgroundColor = "#FFFFFF"
 			count = 1;
 		}
 		else {
-            		property.style.backgroundColor = "#7FFF00"
+            		property.style.backgroundColor = "#000000"
             		count = 0;
 		}
 	}
