--- a/line/index.html
+++ b/line/index.html
@@ -4,6 +4,8 @@ ttitle: Math, Sonification, Plots
 ---
 
 <div class="line_class">
+    <a href="#" onclick="changeDivImage()">change</a>
+
     body { background-color: #FFFFFF; }
     body.on { background-color: #000000; }
 
