--- a/line/index.html
+++ b/line/index.html
@@ -35,11 +35,11 @@ ttitle: Math, Sonification, Plots
     <button>SONIFICATION</button>
     <button>HIGH CONTRAST</button>
     <button>STRD CONTRAST</button>
+    <button type="button" onclick="setBG_Black()">TEST HCS</button>
 </div>
 
 <script>
-    window.onclick = myFunction;
-    function myFunction() {
+    function setBG_Black() {
         document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
     }
 </script>
