--- a/line/index.html
+++ b/line/index.html
@@ -42,7 +42,7 @@ ttitle: Math, Sonification, Plots
     function setBG_Black() {
         document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
     }
-    function setBG_Black() {
+    function setBG_White() {
         document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
     }
 </script>
