--- a/line/index.html
+++ b/line/index.html
@@ -41,8 +41,10 @@ ttitle: Math, Sonification, Plots
 <script>
     function setBG_Black() {
         document.getElementsByTagName("BODY")[0].style.backgroundColor = "black";
+        document.body.style.color = "yellow";
     }
     function setBG_White() {
         document.getElementsByTagName("BODY")[0].style.backgroundColor = "white";
+        document.body.style.color = "black";
     }
 </script>
