--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 title: Math, Sonification, Plots
 ---
+
 <div class="math_class">
 	<h1>Math Graphing</h1>
-	<img src="\images\ST_Circle.png">
-	<p>Math graphs <em>LEARN MORE</em> about sonification. <a href="\images\ST_Parabola.png">Read more about graphs</a></p>
+	<img src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast">
 	
 	<script type="text/javascript">
 	function changeImg(image){
@@ -13,18 +13,6 @@ title: Math, Sonification, Plots
   		imghol.src = image;
 	}
 	</script>
-
-	<div class="ADS2">
-    		<h2>IMAGES</h2>
-    		<p>Please select an image;</p>
-    		<div class="vertical_menu">
-        	  <ul>
-            	    <li><a id="FS" href="javascript:" onclick="changeImg('\images\ST_Circle.png');">Front Side</a></li>
-            	    <li><a id="RS" href="javascript:" onclick="changeImg('\images\HC_Circle.png')">Rear Side</a></li>
-        	  </ul>
-    		</div>
-    		<div class="imageholder"><img id="imageHolder" /></div>
-	</div>
 	
 	<button id="myButton_1" class="float-left submit-button" >CIRCLE</button>
 	<script>document.getElementById("myButton_1").onclick = function () {
@@ -36,43 +24,5 @@ title: Math, Sonification, Plots
 	<script>document.getElementById("myButton_2").onclick = function () {
 		location.href = "\line";
 	};
-	</script>
-	
-	<p>This example demonstrates how to assign an "onclick" event to the window object.</p>
-	<p>Click anywhere in this window to change the background color of body.</p>
-	<script>
-	window.onclick = myFunction;
-	function myFunction() {
-		document.getElementsByTagName("BODY")[0].style.backgroundColor = "yellow";
-	}
-	</script>
-	
-	<!-- input type="button" name="BLACK" value="Ignore Delete" id="select1" onclick="changeColor();" style="background:rgb(0,0,0);"/ --> 
-	<input type="button" name="BLACK" onclick="changeColor();" style="background:#4CAF50; font-weight:bold; color:yellow;"/> 
-	<script>
-	var count = 1;
-	function changeColor() {
-		var property = document.getElementById(btn);
-		if (count == 0) {
-			property.style.backgroundColor = "#FFFFFF"
-			count = 1;
-		}
-		else {
-            		property.style.backgroundColor = "#000000"
-            		count = 0;
-		}
-	}
-	</script>
-
-	<script>
-	function colorchange(id) {
-		var background = document.getElementById(id).style.background;
-		if (background == "rgb(255,145,0)") {
-	   		document.getElementById(id).style.background = "rgb(26,255,0)";
-	   	}
-  	   	if (background == "rgb(26,255,0)") {
-			document.getElementById(id).style.background = "rgb(255,145,0)";
-  		}
-	}
 	</script>
 </div>
