--- a/about/index.html
+++ b/about/index.html
@@ -11,13 +11,12 @@ title: Math, Sonification, Plots
              }
         </style>
         </head>
-        
+        <a href="https://www.w3schools.com">Visit W3Schools.com!</a>
         <h1>About the Project</h1>
         <div><p>
            This website is part of a human factors study to improve ergonomics for the visually impaired.
-           The concept originates from a <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology" target="_blank">
-           CS 6460: Educational Technology</a> class project. In addition to this website,
-           I have built a <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform" target="_blank">
-           survey</a> to gather information for utilizing High Contrast Settings.
+           The concept originates from a <a href="https://www.omscs.gatech.edu/cs-6460-educational-technology"CS 6460: Educational Technology</a> class project.
+           In addition to this website, I have built a
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform"survey</a> to gather information for utilizing High Contrast Settings.
         </p></div>
 </div>
