--- a/circle/index.html
+++ b/circle/index.html
@@ -30,7 +30,9 @@ title: Math, Sonification, Plots
                 var audio = document.getElementById("audio");
                 audio.play();
                 }
-
+        </script>
+  
+        <script>
                 var onImg= "\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast";
                 var offImg= "\images\HC_Circle.png" title="Graph of a Circle with High Contrast";
         </script>
