--- a/circle/index.html
+++ b/circle/index.html
@@ -32,6 +32,7 @@ title: Math, Sonification, Plots
                 }
         </script>
   
+        <img src="\images\ST_Circle.png" name="pic" onclick="window.document.pic.src='\images\HC_Circle.png';"/>
         <script>
                 var onImg= "\images\ST_Circle.png" title="Graph of a Circle w/o High Contrast";
                 var offImg= "\images\HC_Circle.png" title="Graph of a Circle with High Contrast";
