--- a/circle/index.html
+++ b/circle/index.html
@@ -25,10 +25,10 @@ title: Math, Sonification, Plots
         
         <style>
                .expand {
-                content:url("http://site.com/expand.gif");
+                content:url("https://rbobkoskie3.github.io/images/ST_Circle.png");
         }
         .collapse {
-                content:url("http://site.com/collapse.gif");
+                content:url("https://rbobkoskie3.github.io/images/ST_Circle.png");
         }
         </style>
 
